# SkyThought

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/: .gitattributes  README.md  Sky-T1_data_17k.json
skythought/tools/: .gitattributes  README.md  combine_data.py  convert_format.py  convert_to_data.py  eval.py  inference_and_check.py  label_math_difficulty.py  stats_reasoning.py  upload_hub.py
skythought/tools/labeled_numina_difficulty/: README.md  labeled_amc_aime_0_-1.json  labeled_math_0_-1.json  labeled_olympiads_0_-1.json
skythought/tools/util/: model_utils.py  task_handlers.py
skythought/tools/util/math/: testing_util.py
skythought/train/: README.md
skythought/train/LLaMA-Factory/: .deepspeed_env  launch_3_nodes.sh  single_node.sh  train.sh  zero3_config.json
skythought/train/LLaMA-Factory/data/: dataset_info.json
skythought/train/LLaMA-Factory/examples/train_full/: qwen2_full_sft.yaml
skythought/train/LLaMA-Factory/src/llamafactory/data/: template.py
