[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fsreasoning"
version = "0.0.0"
description = "An open platform for training, serving, and evaluating large reasoning models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp", "fastapi", "httpx", "markdown2[all]", "nh3", "numpy",
    "prompt_toolkit>=3.0.0", "pydantic<3,>=2.0.0", "pydantic-settings", "psutil", "requests", "rich>=10.0.0",
    "shortuuid", "tiktoken", "uvicorn", "accelerate", "torch", "transformers", "protobuf", "vllm", "gradio", "flash-attn", "wandb",
    "ray", "einops", "pylint"
]

[tool.setuptools.packages.find]
exclude = ["assets*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "docs", "dist*", "playground*", "scripts*", "tests*"]
