[project]
name = "skythought"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets>=3.2.0",
    "latex2sympy2>=1.9.1",
    "openai>=1.59.9",
    "pyext>=0.7",
    "regex>=2024.11.6",
    "rich>=13.9.4",
    "scipy>=1.15.1",
    "word2number>=1.1",
]
